ms2/gitops/tenants/enterprise/ent2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tripplanning-ent-ent2
  labels:
    app.kubernetes.io/name: tripplanning
    istio-injection: enabled
    tier: enterprise
    tenant_id: ent2
    tripplanning.htwg.dev/tier: enterprise
    tripplanning.htwg.dev/tenant-id: ent2
